# pygments-yara-lexer

./: README.md  pyproject.toml
pygments_yara_lexer/: yara.py
