[tool.poetry]
name = "pygments-yara-lexer"
version = "0.1.0"
description = "YARA language lexer for pygments."
authors = ["Matej Kastak"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Pygments = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."pygments.lexers"]
yara = "pygments_yara_lexer.yara:YaraLexer"
